[gd_scene load_steps=4 format=3 uid="uid://kmd2kr5w4u8q"]

[ext_resource type="Script" path="res://ui/panels.gd" id="1_koirm"]
[ext_resource type="Texture2D" uid="uid://begb0uquacql1" path="res://level2/end_screen.png" id="2_fniew"]
[ext_resource type="FontFile" uid="uid://do7go87t4hww2" path="res://ui/Symtext.ttf" id="3_gkp42"]

[node name="Panels" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_koirm")

[node name="LevelFailedPanel" type="Panel" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.5
offset_top = -205.0
offset_right = 364.5
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelFailedPanel"]
layout_mode = 2
offset_top = 2.0
offset_right = 750.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 89
text = "Level Failed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="LevelFailedPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -132.0
offset_right = 267.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0

[node name="RestartButton" type="Button" parent="LevelFailedPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "RESTART"

[node name="Seperator" type="Control" parent="LevelFailedPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="QuitButton" type="Button" parent="LevelFailedPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "QUIT"

[node name="LevelClearedPanel" type="Panel" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.5
offset_top = -205.0
offset_right = 364.5
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelClearedPanel"]
layout_mode = 2
offset_top = 2.0
offset_right = 750.0
offset_bottom = 125.0
theme_override_font_sizes/font_size = 89
text = "Level Cleared!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="LevelClearedPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -92.0
offset_top = -132.0
offset_right = 111.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 0

[node name="NextButton" type="Button" parent="LevelClearedPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 40
text = "NEXT"

[node name="CongratulationsPanel" type="TextureRect" parent="."]
visible = false
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fniew")

[node name="Label" type="Label" parent="CongratulationsPanel"]
layout_mode = 2
offset_left = 18.0
offset_top = 2.0
offset_right = 912.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gkp42")
theme_override_font_sizes/font_size = 80
text = "Congratulations!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="CongratulationsPanel"]
layout_mode = 2
offset_left = 18.0
offset_top = 116.0
offset_right = 768.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_gkp42")
theme_override_font_sizes/font_size = 40
text = "You caught all the fish..."
vertical_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="CongratulationsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -111.5
offset_top = -110.0
offset_right = 111.5
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0

[node name="YayButton" type="Button" parent="CongratulationsPanel/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_gkp42")
theme_override_font_sizes/font_size = 40
text = "YAY!!"

[connection signal="button_up" from="LevelFailedPanel/Buttons/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="LevelFailedPanel/Buttons/QuitButton" to="." method="_on_quit_button_button_up"]
[connection signal="button_up" from="LevelClearedPanel/Buttons/NextButton" to="." method="_on_next_button_button_up"]
[connection signal="button_up" from="CongratulationsPanel/Buttons/YayButton" to="." method="_on_yay_button_button_up"]
